src-virtualnode/virtual-node-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aci-helloworld
  labels:
    app: aci-helloworld
    heritage: Tiller
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aci-helloworld
  template:
    metadata:
      labels:
        app: aci-helloworld
    spec:
      containers:
      - name: aci-helloworld
        image: microsoft/aci-helloworld
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
      nodeSelector:
        kubernetes.io/role: agent
        beta.kubernetes.io/os: linux
        type: virtual-kubelet
      tolerations:
      - key: virtual-kubelet.io/provider
        operator: Exists
      - key: azure.com/aci
        effect: NoSchedule

---
apiVersion: v1
kind: Service
metadata:
  name: aci-helloworld
  labels:
    app: aci-helloworld
    heritage: Tiller
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: aci-helloworld

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aci-helloworld
  labels:
    app: aci-helloworld
    heritage: Tiller
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
    - http:
        paths:
          - path: /aci
            backend:
              serviceName: aci-helloworld
              servicePort: http
